--- a/website/sign up/sign-up.html
+++ b/website/sign up/sign-up.html
@@ -10,7 +10,7 @@
   <body>
       
     <main>
-      <form action="connect.php" method="post" id="signupform" name="signupform">
+      <form action="signup-connect.php" method="post" id="signupform" name="signupform">
           <div class="container">
             <h1>Sign Up</h1>
             <p>Please fill in this form to create an account.</p>
