--- a/website/checkout/checkout.html
+++ b/website/checkout/checkout.html
@@ -22,7 +22,7 @@
               <label for="email"><b>Email</b></label>
               <input type="email" placeholder="Email" id="email" name="email" required>
           
-              <label for="city"><i class="fa fa-institution"></i> City</label>
+              <label for="city"></label>City</label>
               <input type="text" id="city" name="city" placeholder="New York">
 
           
