--- a/website/index.html
+++ b/website/index.html
@@ -12,10 +12,10 @@
 <body>
     <main>
     
-        <button><a href="login/sign up/sign-up.html">Sign Up</a></button>
+        <button><a href="login signup/sign-up.php">Sign Up</a></button>
         <button><a href="qr-code gen/qrcode.html">Qr code gen</a></button>
         <button><a href="checkout/checkout-contact-details.html">Checkout contact details</a></button>
-        <button><a href="login/login.php">Login</a></button>
+        <button><a href="login signup/login.php">Login</a></button>
 
         
     </main>
