contact details checkout
contact details checkout met db

--- a/website/index.html
+++ b/website/index.html
@@ -14,8 +14,9 @@
     
         <button><a href="login_system/sign-up.php">Sign Up</a></button>
         <button><a href="qr-code gen/qrcode.html">Qr code gen</a></button>
-        <button><a href="checkout/checkout-contact-details.html">Checkout contact details</a></button>
+        <button><a href="checkout/checkout-contact-details.php">Checkout contact details</a></button>
         <button><a href="login_system/login.php">Login</a></button>
+
 
         
     </main>
