--- a/website/home/home.html
+++ b/website/home/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div>
+    <div class="anv">
         <header>
             <img class="logo" src="images/logo.png" alt="logo">
             <nav>
@@ -18,10 +18,8 @@
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
-            <a href="http://localhost:3000/website/login_system/sign-up.php"><button>Get Started</button></a>
+            <a href="http://localhost:3000/website/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
         </header>
-
-
     </div>
 </body>
 </html>
