--- a/website/index.html
+++ b/website/index.html
@@ -16,6 +16,7 @@
         <button><a href="qr-code gen/qrcode.html">Qr code gen</a></button>
         <button><a href="checkout/checkout-contact-details.php">Checkout contact details</a></button>
         <button><a href="login_system/login.php">Login</a></button>
+        <button><a href="home/home.html">Home</a></button>
 
 
         
