--- a/website-localhost/home/home.html
+++ b/website-localhost/home/home.html
@@ -13,12 +13,12 @@
             <img class="logo" src="images/logo.png" alt="logo">
             <nav>
                 <ul class="nav_links">
-                    <li><a href="http://localhost:3000/website/home/home.html">Home</a></li>
+                    <li><a href="http://localhost:3000/website-localhost/home/home.html">Home</a></li>
                     <li><a href="">How</a></li>
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
-            <a href="http://localhost:3000/website/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
+            <a href="http://localhost:3000/website-localhost/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
         </header>
     </div>
 </body>
