--- a/website-localhost/home/home.html
+++ b/website-localhost/home/home.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul class="nav_links">
                     <li><a href="http://localhost:3000/website-localhost/home/home.html">Home</a></li>
-                    <li><a href="">How</a></li>
+                    <li><a href="">How to</a></li>
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
