footer + event page

--- a/website-localhost/events/events.html
+++ b/website-localhost/events/events.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="events.css">
 </head>
 <body>
     <div>
@@ -22,13 +22,15 @@
         </header>
     </div>
     <div>
+        <h1>EVENTS</h1>
+    </div>
+    <div>
         <footer>
             <h5 class="footer-copyright">
                 Copyright © 2023 TICKETSCANNER | Powered by Warre Gielkens & Jorre Noben
             </h5>
         </footer>
     </div>
+
 </body>
 </html>
-
-
