--- a/website-one.com/website/events/events.html
+++ b/website-one.com/website/events/events.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="events.css">
 </head>
 <body>
-    <div>
+    <div    >
         <header>
             <img class="logo" src="images/logo.png" alt="logo">
             <nav>
@@ -22,11 +22,7 @@
         </header>
     </div>
     <div>
-        <footer>
-            <h5 class="footer-copyright">
-                Copyright © 2023 TICKETSCANNER | Powered by Warre Gielkens & Jorre Noben
-            </h5>
-        </footer>
+        <h1>EVENTS</h1>
     </div>
 </body>
 </html>
