--- a/website-one.com/website/events/events.html
+++ b/website-one.com/website/events/events.html
@@ -24,5 +24,12 @@
     <div>
         <h1>EVENTS</h1>
     </div>
+    <div>
+        <footer>
+            <h5 class="footer-copyright">
+                Copyright © 2023 TICKETSCANNER | Powered by Warre Gielkens & Jorre Noben
+            </h5>
+        </footer>
+    </div>
 </body>
 </html>
