working on home page

--- a/website-one.com/website/events/events.html
+++ b/website-one.com/website/events/events.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="events.css">
 </head>
 <body>
-    <div    >
+    <div>
         <header>
             <img class="logo" src="images/logo.png" alt="logo">
             <nav>
@@ -24,7 +24,7 @@
     <div>
         <h1>EVENTS</h1>
     </div>
-    <div>
+    <div class="footer-section">
         <footer>
             <h5 class="footer-copyright">
                 Copyright © 2023 TICKETSCANNER | Powered by Warre Gielkens & Jorre Noben
