--- a/website-one.com/website/home/home.html
+++ b/website-one.com/website/home/home.html
@@ -21,7 +21,25 @@
             <a href="https://iict.be//website/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
         </header>
     </div>
+
     <div>
+        <main>
+            <div>
+                <h1>Koop hier nu je ticket en Download de app voor je ticket te laten scannnen!</h1>
+                <h3>Registreer je of log in voor alle events te zien</h3>
+            </div>
+            <div class="phone">
+                <img src="images/phone.png" alt="">
+            </div>
+
+        </main>
+
+        
+    </div>
+
+
+    
+    <div  class="footer-section">
         <footer>
             <h5 class="footer-copyright">
                 Copyright © 2023 TICKETSCANNER | Powered by Warre Gielkens & Jorre Noben
