--- a/website-localhost/events/events.html
+++ b/website-localhost/events/events.html
@@ -24,7 +24,7 @@
     <div>
         <h1>EVENTS</h1>
     </div>
-    <div>
+    <div class="footer-section">
         <footer>
             <h5 class="footer-copyright">
                 Copyright © 2023 TICKETSCANNER | Powered by Warre Gielkens & Jorre Noben
