--- a/website-localhost/home/home.html
+++ b/website-localhost/home/home.html
@@ -22,6 +22,26 @@
         </header>
     </div>
     <div>
+        <main>
+            <div>
+                <h1>Koop hier nu je ticket en Download de app voor je ticket te laten scannnen!</h1>
+                <h3>Registreer je of log in voor alle events te zien</h3>
+            </div>
+            <div class="phone">
+                <img src="images/phone.png" alt="">
+            </div>
+
+        </main>
+
+        
+    </div>
+
+
+
+
+
+
+    <div class="footer-section">
         <footer>
             <h5 class="footer-copyright">
                 Copyright © 2023 TICKETSCANNER | Powered by Warre Gielkens & Jorre Noben
