home screen update

--- a/website-one.com/website/home/home.html
+++ b/website-one.com/website/home/home.html
@@ -24,12 +24,13 @@
 
     <div>
         <main>
-            <div>
-                <h1>Koop hier nu je ticket en Download de app voor je ticket te laten scannnen!</h1>
-                <h3>Registreer je of log in voor alle events te zien</h3>
-            </div>
+
             <div class="phone">
-                <img src="images/phone.png" alt="">
+                <div class="text-1">
+                    <h1>Koop hier nu je ticket en Download de app voor je ticket te laten scannnen!</h1>
+                    <h4>Registreer je of log in voor alle events te zien</h4>
+                </div>
+                <img class="phone-pic" src="images/phone.png" alt="">
             </div>
 
         </main>
