home screen update and files org

--- a/website/home/home.html
+++ b/website/home/home.html
@@ -27,10 +27,30 @@
 
             <div class="phone">
                 <div class="text-1">
-                    <h1>Koop hier nu je ticket en Download de app voor je ticket te laten scannnen!</h1>
+                    <h1>Koop hier nu je ticket en Download de app voor je ticket te laten scannen!</h1>
                     <h4>Registreer je of log in voor alle events te zien</h4>
                 </div>
                 <img class="phone-pic" src="images/phone.png" alt="">
+            </div>
+            <div class="text-up-events">
+                <h1>Upcomming events</h1>
+            </div>
+
+            <div class="events">
+
+                
+                <div class="event_img">
+                    <img src="images/events_img.png" alt="">
+                    
+                </div>
+                <div class="event_img">
+                    <img src="images/events_img.png" alt="">
+
+                </div>
+                <div class="event_img">
+                    <img src="images/events_img.png" alt="">
+
+                </div>
             </div>
 
         </main>
