eigen db terug + sticky navbar

--- a/website/events/events.html
+++ b/website/events/events.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" href="events.css">
 </head>
 <body>
-    <div>
+    <div class="navbar">
         <header>
             <img class="logo" src="images/logo.png" alt="logo">
             <nav>
                 <ul class="nav_links">
-                    <li><a href="https://iict.be//website/home/home.html">Home</a></li>
-                    <li><a href="https://iict.be//website/events/events.html">Events</a></li>
+                    <li><a href="http://193.121.129.31/website/home/home.html">Home</a></li>
+                    <li><a href="http://193.121.129.31/website/events/events.html">Events</a></li>
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
-            <a href="https://iict.be//website/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
+            <a href="http://193.121.129.31/website/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
         </header>
     </div>
-    <div>
+    <div class="text-events">
         <h1>EVENTS</h1>
     </div>
     <div class="footer-section">
@@ -31,5 +31,9 @@
             </h5>
         </footer>
     </div>
+
+
+
+    <script src="main.js"></script>
 </body>
 </html>
