--- a/website/home/home.html
+++ b/website/home/home.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div>
+    <div class="navbar">
         <header>
             <img class="logo" src="images/logo.png" alt="logo">
             <nav>
                 <ul class="nav_links">
-                    <li><a href="https://iict.be//website/home/home.html">Home</a></li>
-                    <li><a href="https://iict.be//website/events/events.html">Events</a></li>
+                    <li><a href="http://193.121.129.31/website/home/home.html">Home</a></li>
+                    <li><a href="http://193.121.129.31/website/events/events.html">Events</a></li>
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
-            <a href="https://iict.be//website/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
+            <a href="http://193.121.129.31/website/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
         </header>
     </div>
 
@@ -67,5 +67,9 @@
             </h5>
         </footer>
     </div>
+
+
+    
+    <script src="main.js"></script>
 </body>
 </html>
