kleine update home page
35-40min

--- a/website/events/events.html
+++ b/website/events/events.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Events</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="events.css">
-</head>
+</head> 
 <body>
     <div class="navbar">
         <header>
@@ -18,7 +19,7 @@
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
-            <a href="http://193.121.129.31/website/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
+            <a href="http://193.121.129.31/website/login_system/sign-up.php"><button class="nav_button">Sign Up</button></a>
         </header>
     </div>
     <div class="text-events">
