--- a/website/home/home.html
+++ b/website/home/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="icon" href="images/logo_tab.png">
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
@@ -18,7 +19,7 @@
                     <li><a href="">About</a></li>
                 </ul>
             </nav>
-            <a href="http://193.121.129.31/website/login_system/sign-up.php"><button class="nav_button">Get Started</button></a>
+            <a href="http://193.121.129.31/website/login_system/sign-up.php"><button class="nav_button">Sign Up</button></a>
         </header>
     </div>
 
@@ -37,20 +38,22 @@
             </div>
 
             <div class="events">
-
-                
-                <div class="event_img">
-                    <img src="images/events_img.png" alt="">
-                    
+                <div class="event-img">
+                    <a href="http://193.121.129.31/website/events/events.html"><img src="images/events_img.png" alt=""></a>
+                    <h2 class="event-name">Event name 1</h2>
                 </div>
-                <div class="event_img">
-                    <img src="images/events_img.png" alt="">
-
+                <div class="event-img">
+                    <a href="http://193.121.129.31/website/events/events.html"><img src="images/events_img.png" alt=""></a>
+                    <h2 class="event-name">Event name 1</h2>
                 </div>
-                <div class="event_img">
-                    <img src="images/events_img.png" alt="">
-
+                <div class="event-img">
+                    <a href="http://193.121.129.31/website/events/events.html"><img src="images/events_img.png" alt=""></a>
+                    <h2 class="event-name">Event name 1</h2>
                 </div>
+            </div>
+
+            <div class="btn-more-events">
+                <a href="http://193.121.129.31/website/events/events.html">See more events</a>
             </div>
 
         </main>
