--- a/website/home/home.html
+++ b/website/home/home.html
@@ -56,6 +56,28 @@
                 <a href="http://193.121.129.31/website/events/events.html">See more events</a>
             </div>
 
+            <div class="text-sponser">
+                <h1>Our Sponsers</h1>
+            </div>
+
+            <div class="sponsers">
+                <div class="sponser-img">
+                    <a href="https://www.cristal.be/"><img class="cristal-img" src="images/cristal logo.png" alt=""></a>
+                </div>
+                <div class="sponser-img">
+                    <a href="https://pepsi.be/"><img class="pepsi-img" src="images/pepsi logo.png" alt=""></a>
+                </div>
+                <div class="sponser-img">
+                    <a href="https://www.robe.cz/"><img class="robe-img" src="images/robe logo.png" alt=""></a>
+                </div>
+                <div class="sponser-img">
+                    <a href="https://www.autoslimburg.be/"><img class="auto-limburg-img" src="images/auto's limburg logo.png" alt=""></a>
+                </div>
+                <div class="sponser-img">
+                    <a href="https://www.apachefriends.org/"><img class="xampp-img" src="images/xampp logo.png" alt=""></a>
+                </div>  
+            </div>
+
         </main>
 
         
