--- a/website/index.html
+++ b/website/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIP 2023</title>
-
-        
+    <link rel="icon" href="images/logo_tab.png">
     <script src="https://kit.fontawesome.com/cf1151c039.js"></script>
 </head>
 <body>
