--- a/website/events/events.html
+++ b/website/events/events.html
@@ -16,7 +16,6 @@
                 <ul class="nav_links">
                     <li><a href="http://193.121.129.31/website/home/home.html">Home</a></li>
                     <li><a href="http://193.121.129.31/website/events/events.html">Events</a></li>
-                    <li><a href="">About</a></li>
                 </ul>
             </nav>
             <a href="http://193.121.129.31/website/login_system/sign-up.php"><button class="nav_button">Sign Up</button></a>
@@ -27,6 +26,72 @@
     
     <div class="text-events">
         <h1>EVENTS</h1>
+    </div>
+
+    <div class="events">
+        <div class="event">
+            <div class="event-img">
+                <img src="images/events_img.png" alt="">
+            </div>
+            <div class="event-details">
+                <div class="event-text">
+                    <h1>Title event</h1>
+                    <h3>about event
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                    </h3>
+                </div>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+            </div>    
+        </div>
+    </div>
+
+    <div class="events">
+        <div class="event">
+            <div class="event-img">
+                <img src="images/events_img.png" alt="">
+            </div>
+            <div class="event-details">
+                <div class="event-text">
+                    <h1>Title event</h1>
+                    <h3>about event
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                    </h3>
+                </div>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+            </div>    
+        </div>
+    </div>
+
+    <div class="events">
+        <div class="event">
+            <div class="event-img">
+                <img src="images/events_img.png" alt="">
+            </div>
+            <div class="event-details">
+                <div class="event-text">
+                    <h1>Title event</h1>
+                    <h3>about event
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                    </h3>
+                </div>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+            </div>    
+        </div>
     </div>
 
 
