--- a/website/logged-out/events/events.html
+++ b/website/logged-out/events/events.html
@@ -94,6 +94,50 @@
         </div>
     </div>
 
+    <div class="events">
+        <div class="event">
+            <div class="event-img">
+                <img src="images/events_img.png" alt="">
+            </div>
+            <div class="event-details">
+                <div class="event-text">
+                    <h1>Title event</h1>
+                    <h3>about event
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                    </h3>
+                </div>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+            </div>    
+        </div>
+    </div>
+
+    <div class="events">
+        <div class="event">
+            <div class="event-img">
+                <img src="images/events_img.png" alt="">
+            </div>
+            <div class="event-details">
+                <div class="event-text">
+                    <h1>Title event</h1>
+                    <h3>about event
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                        <br>
+                        --------------
+                    </h3>
+                </div>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+            </div>    
+        </div>
+    </div>
+
 
 
     <div class="footer-section">
