images aangepast + login en signup ww gemaakt met oogje voor te zien
6u

--- a/website/logged-out/events/events.html
+++ b/website/logged-out/events/events.html
@@ -11,7 +11,7 @@
 <body>
     <div class="navbar">
         <header>
-            <img class="logo" src="images/logo.png" alt="logo">
+        <a class="logo" href="http://193.121.129.31/website/logged-out/home/home.html"><img src="images/logo.png" alt="logo"></a>
             <nav>
                 <ul class="nav_links">
                     <li><a href="http://193.121.129.31/website/logged-out/home/home.html">Home</a></li>
@@ -31,18 +31,18 @@
     <div class="events">
         <div class="event">
             <div class="event-img">
-                <img src="images/events_img.png" alt="">
+                <img src="images/events_zillion.png" alt="">
             </div>
             <div class="event-details">
                 <div class="event-text">
-                    <h1>Title event</h1>
+                    <h1>The Zillion</h1>
                     <h3>about event
                         <br>
-                        --------------
+                        Voor de nieuwe Zillion film
                         <br>
-                        --------------
+                        21:00 - 06:00
                         <br>
-                        --------------
+                        Karrewiel Hoeselt
                     </h3>
                 </div>
                 <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
@@ -53,18 +53,18 @@
     <div class="events">
         <div class="event">
             <div class="event-img">
-                <img src="images/events_img.png" alt="">
+                <img src="images/event_posttisj.png" alt="">
             </div>
             <div class="event-details">
                 <div class="event-text">
-                    <h1>Title event</h1>
-                    <h3>about event
+                    <h1>Post X-MOS TISJ</h1>
+                    <h3>About event:
                         <br>
-                        --------------
+                        Post X-MOS van TISJ
                         <br>
-                        --------------
+                        21:00 - 03:00
                         <br>
-                        --------------
+                        Karrewiel Hoeselt
                     </h3>
                 </div>
                 <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
@@ -75,18 +75,18 @@
     <div class="events">
         <div class="event">
             <div class="event-img">
-                <img src="images/events_img.png" alt="">
+                <img src="images/event_preikso.png" alt="">
             </div>
             <div class="event-details">
                 <div class="event-text">
-                    <h1>Title event</h1>
-                    <h3>about event
+                    <h1>Pre X-MOS IKSO</h1>
+                    <h3>About event:
                         <br>
-                        --------------
+                        Pre X-MOS van IKSO
                         <br>
-                        --------------
+                        21:00 - 03:00
                         <br>
-                        --------------
+                        Karrewiel Hoeselt
                     </h3>
                 </div>
                 <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
@@ -97,18 +97,18 @@
     <div class="events">
         <div class="event">
             <div class="event-img">
-                <img src="images/events_img.png" alt="">
+                <img src="images/event_prehgi.png" alt="">
             </div>
             <div class="event-details">
                 <div class="event-text">
-                    <h1>Title event</h1>
-                    <h3>about event
+                    <h1>Pre X-MOS HGI</h1>
+                    <h3>About event:
                         <br>
-                        --------------
+                        Pre X-MOS van HGI
                         <br>
-                        --------------
+                        21:00 - 03:00
                         <br>
-                        --------------
+                        Karrewiel Hoeselt
                     </h3>
                 </div>
                 <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
@@ -119,18 +119,18 @@
     <div class="events">
         <div class="event">
             <div class="event-img">
-                <img src="images/events_img.png" alt="">
+                <img src="images/events_pretisj.png" alt="">
             </div>
             <div class="event-details">
                 <div class="event-text">
-                    <h1>Title event</h1>
-                    <h3>about event
+                    <h1>Pre X-MOS TISJ</h1>
+                    <h3>About event:
                         <br>
-                        --------------
+                        Pre X-MOS van TISJ
                         <br>
-                        --------------
+                        21:00 - 03:00
                         <br>
-                        --------------
+                        Karrewiel Hoeselt
                     </h3>
                 </div>
                 <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
