--- a/website/logged-out/events/events.html
+++ b/website/logged-out/events/events.html
@@ -19,6 +19,7 @@
                 </ul>
             </nav>
             <a href="http://193.121.129.31/website/logged-out/login_system/sign-up.php"><button class="nav_button">Sign Up</button></a>
+            <a href="http://193.121.129.31/website/logged-out/login_system/login.php"><button class="nav_button2">Login</button></a>
         </header>
     </div>
 
@@ -45,7 +46,7 @@
                         Karrewiel Hoeselt
                     </h3>
                 </div>
-                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="get-ticket">Get Ticket</button></a>
             </div>    
         </div>
     </div>
@@ -67,7 +68,7 @@
                         Karrewiel Hoeselt
                     </h3>
                 </div>
-                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="get-ticket">Get Ticket</button></a>
             </div>    
         </div>
     </div>
@@ -89,7 +90,7 @@
                         Karrewiel Hoeselt
                     </h3>
                 </div>
-                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="get-ticket">Get Ticket</button></a>
             </div>    
         </div>
     </div>
@@ -111,7 +112,7 @@
                         Karrewiel Hoeselt
                     </h3>
                 </div>
-                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="get-ticket">Get Ticket</button></a>
             </div>    
         </div>
     </div>
@@ -133,7 +134,7 @@
                         Karrewiel Hoeselt
                     </h3>
                 </div>
-                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="buy-ticket">Buy Ticket</button></a>
+                <a href="http://193.121.129.31/website/checkout/checkout-contact-details.php"><button class="get-ticket">Get Ticket</button></a>
             </div>    
         </div>
     </div>
