--- a/website/logged-out/home/home.html
+++ b/website/logged-out/home/home.html
@@ -19,6 +19,7 @@
                 </ul>
             </nav>
             <a href="http://193.121.129.31/website/logged-out/login_system/sign-up.php"><button class="nav_button">Sign Up</button></a>
+            <a href="http://193.121.129.31/website/logged-out/login_system/login.php"><button class="nav_button2">Login</button></a>
         </header>
     </div>
 
